k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: www-roadtokubernetes-com-service
  namespace: www
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      # set targetPort from deployment
      targetPort: www-roadtokubernetes-port
  selector:
    app: www-roadtokubernetes-com-deployment
